Make sure login and sign up buttons are visible via scroll if window is smaller and make sure our names don't get cut off in footer

--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -18,11 +18,16 @@
 
 #footer-names {
   padding-left: 100px;
-  font-size: 25px;
+  font-size: 20px;
   padding-top: 4px;
   padding-right: 10px;
   display: inline-flex;
   align-items: center;
+  text-align: center;
+}
+
+#footer-names:first-child{
+  padding-left: 0;
 }
 
 .footer-icons {
