--- a/frontend/src/components/splash/splash_page.css
+++ b/frontend/src/components/splash/splash_page.css
@@ -57,11 +57,10 @@
 
 .splash-pg {
   position: relative;
-  top: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(70vh - 20px);
+  min-height: 100vh;
 }
 
 body {
@@ -76,6 +75,7 @@ body {
   align-items: center;
   flex-direction: row;
   font-size: 35px;
+  padding-bottom: 70px;
 }
 
 .splash-img {
@@ -96,7 +96,7 @@ body {
   height: 500px; */
 }
 .splash-intro {
-  margin-left: 50px;
+  /* margin-left: 50px; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
